# definitely-not-crosswords

./: .dockerignore  .gitignore  .npmrc  .sops.yaml  Dockerfile  README.md  app.vue  codebase-dependency-graph.json  flake.nix  nuxt.config.ts  otel.cjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  release-plz.toml  secrets.yaml  secrets.yaml.example  tailwind.config.ts
.github/workflows/: ci.yaml  deploy-staging.yml  e2e-canary.yml  release-plz.yml
assets/css/: tailwind.css
charts/definitely-not-crosswords/: Chart.yaml  values.yaml
charts/definitely-not-crosswords/dashboards/: backend-errors.json  frontend-errors.json  testing-regressions.json
charts/definitely-not-crosswords/templates/: _helpers.tpl  cnpg-cluster.yaml  deployment.yaml  grafanadashboard.yaml  ingress.yaml  secrets.yaml  seed-cronjob.yaml  service.yaml  servicemonitor.yaml
client/: CHANGELOG.md  Cargo.toml  flake.nix
client/backend/auth/: Cargo.toml
client/backend/auth/src/: lib.rs
client/backend/db/: Cargo.toml
client/backend/db/src/: lib.rs
client/backend/events/: Cargo.toml
client/backend/events/src/: lib.rs
client/backend/server/: Cargo.toml
client/backend/server/src/: auth_routes.rs  checkout.rs  ctx.rs  main.rs  webhook.rs
client/backend/server/src/routers/: active_game.rs  discount.rs  game_list.rs  generator.rs  message.rs  mod.rs  stats.rs  subscription.rs  team.rs  user.rs
client/backend/server/src/routers/generator/: dict.rs  embed.rs  mod.rs  solver.rs
client/backend/tools/: Cargo.toml
client/backend/tools/migrations/: 20230618194348_init.sql  20260526053113_add_guess_stats.sql  20260528143036_add_subscription_quota.sql  20260529020000_add_user_credentials.sql  20260529083000_add_user_vip_pass.sql  20260529090000_add_discounts.sql  20260703000000_add_game_created_by.sql  20260703120000_add_teams.sql  20260703120100_add_subscription_last_event.sql  20260703130000_cascade_user_account_deletes.sql
client/core/: Cargo.toml
client/core/src/: auth.rs  game.rs  lib.rs  rpc.rs
client/desktop/: .gitignore  Cargo.toml  tauri.conf.json
client/desktop/src/: main.rs
client/web/: Cargo.toml  Dioxus.toml
client/web/src/: main.rs  net.rs  store.rs  styles.rs
client/web/src/components/: admin_nav.rs  brand.rs  footer.rs  generation_progress.rs  header.rs  identicon.rs  mod.rs  pro_upgrade.rs  staging_banner.rs
client/web/src/pages/: admin_discounts.rs  admin_generator.rs  admin_index.rs  admin_users.rs  game_completed.rs  game_new.rs  game_play.rs  games.rs  home.rs  login.rs  mod.rs  profile.rs  signup.rs  stats.rs  verify_email.rs
components/: ActiveClueCard.vue  AdminNav.vue  AppFooter.vue  AppHeader.vue  GameBoard.vue  GenerationProgress.vue  QuestionDirectionFilterBar.vue  QuestionsList.vue  SolvedGameView.vue
data/crossword/: .gitignore  README.md  manifest.json
e2e/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts
e2e/tests/: demo.spec.ts  helpers.ts  smoke.spec.ts
layouts/: default.vue
lib/: metrics.ts
lib/auth/: roles.ts
lib/game/: boardSizeFromQuestions.ts  boardState.ts  cell.ts  game.ts  gameAction.ts  question.ts
nitro/: ws.ts
pages/: games.vue  index.vue  profile.vue  stats.vue
pages/admin/: generator.vue  index.vue  users.vue
pages/auth/: signup.vue  verify-email.vue
pages/game/[id]/: completed.vue  index.vue  new.vue
plugins/: client.ts
prisma/: schema.prisma  seed.ts
prisma/migrations/20260526014500_add_crossword_generation_jobs/: migration.sql
prisma/migrations/20260526021000_add_dictionary_tables/: migration.sql
prisma/migrations/20260529082000_add_generation_job_metadata/: migration.sql
scratch-nixlab/: flake.nix
scratch-nixlab/.github/workflows/: build-gce-images.yml
scratch-nixlab/lib/: hosts.nix  wireguard-peers.nix
scratch-nixlab/modules/nixos/k8s-worker/: default.nix
scratch-nixlab/systems/x86_64-linux/gcp-udp-relay/: default.nix
scratch-nixlab/systems/x86_64-linux/hetzner-relay/: default.nix
scripts/: prepare_crossword_assets.mjs  seed_admin_users.mjs  seed_wordnet_dictionary.mjs  try_crossword_wfc.rs  try_generate_10x10_from_db.mjs
secrets/: ci-test-metrics.sops.yaml
server/api/: checkout.post.ts  healthz.get.ts  metrics.get.ts  subscription.get.ts
server/api/auth/: [...].ts
server/api/trpc/: [trpc].ts
server/api/webhooks/: lemonsqueezy.post.ts
server/middleware/: 0.prisma.ts
server/routes/api/: trpc-ws.ts
server/services/crossword/: generateCrossword.ts
server/trpc/: context.ts  trpc.ts
server/trpc/router/: activeGame.ts  gameList.ts  generator.ts  index.ts  stats.ts  subscription.ts  team.ts  user.ts
stores/: activeGame.ts  subscription.ts
tailwind/: tailwind-workspace-preset.js
tests/e2e/: auth.spec.ts  game.spec.ts  trpc-mock.spec.ts  user-management.spec.ts  visual.spec.ts
tests/e2e/setup/: auth.setup.ts
