[workspace]
resolver = "2"
members = ["core", "web", "desktop", "backend/db", "backend/auth", "backend/events", "backend/server", "backend/tools"]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.23"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
