[package]
name = "crossword-web"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
crossword-core = { path = "../core" }
dioxus = { version = "0.6", features = ["web", "router"] }
serde.workspace = true
serde_json.workspace = true
panel-kit = { path = "/home/olive/Repositories/panel-kit" }
gloo-storage = "0.3"
gloo-net = { version = "0.6", features = ["http", "websocket", "json"] }
gloo-timers = { version = "0.3", features = ["futures"] }
futures = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Window", "Location", "Document", "Element", "DomTokenList", "console",
] }
# Pinned to the wasm-bindgen-cli nixpkgs ships (panel-kit's lock pins the same);
# dx refuses to bindgen against a mismatched CLI.
wasm-bindgen = "=0.2.121"
