[package]
name = "crossword-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
] }
serde.workspace = true
serde_json.workspace = true
crossword-db = { path = "../db" }
crossword-auth = { path = "../auth" }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Ports use these: uuid (new record ids), scrypt+rand+hex (password hashing to
# match lib/auth/password.ts), reqwest (Lemon Squeezy API for discounts).
uuid = { version = "1", features = ["v4"] }
scrypt = "0.11"
rand = "0.8"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
