[package]
name = "crossword-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum = { version = "0.7", features = ["ws"] }
# Serve the built wasm frontend (single origin: relative /api + native WS, no
# node proxy) when WEB_DIST is set.
tower-http = { version = "0.6", features = ["fs"] }
futures-util = "0.3"
crossword-events = { path = "../events" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
] }
serde.workspace = true
serde_json.workspace = true
crossword-db = { path = "../db" }
crossword-auth = { path = "../auth" }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Ports use these: uuid (new record ids), scrypt+rand+hex (password hashing to
# match lib/auth/password.ts), reqwest (Lemon Squeezy API for discounts).
uuid = { version = "1", features = ["v4"] }
scrypt = "0.11"
rand = "0.8"
hex = "0.4"
# HMAC-SHA256 verification of Lemon Squeezy webhook signatures.
hmac = "0.12"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
# ONNX crossword generator (port of services/crossword + @xenova/transformers):
# ort runs the quantized MiniLM model, tokenizers does the BERT wordpiece, regex
# backs the gloss-quality filters. No download-binaries: onnxruntime is supplied
# via ORT_LIB_LOCATION (a vendored 1.24.2 static lib — see the flake's `ortLib`
# FOD and the devShell env). This keeps the build offline + openssl-free.
ort = { version = "=2.0.0-rc.12", default-features = false, features = [
  "std",
  "ndarray",
] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
regex = "1"
