[package]
name = "crossword-tools"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "macros",
  "migrate",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
serde_json = "1"
# scrypt+rand+hex: password hashing matching backend/server's verify_password
scrypt = "0.11"
rand = "0.8"
hex = "0.4"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[[bin]]
name = "seed_admin"
path = "src/bin/seed_admin.rs"

[[bin]]
name = "seed_test_users"
path = "src/bin/seed_test_users.rs"
